# sudoku-padic-regression

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  Makefile  README.md  README.txt  pyproject.toml
.github/workflows/: claude-code-review.yml  padic-logic.yml  python.yml
archive/: CLAUDE.md  RESULTS.md  pyproject.toml
archive/results/: e1_prime_sweep.csv
archive/scripts/: run_experiments.py
archive/src/padic_sudoku/: encoding.py  experiment.py  forcing_lemma.py  puzzle.py  regression.py  solver.py
code/: make_experiment_report.py  padic_comparison_algorithms.py  padic_linear_regression.py  padic_sudoku_regression.py  run_experiments.py
correction-progress/: signed-14jul2026.md  signed-15jul2026.md
fixtures/: sudoku_objective_golden.json
padic-logic.symmachus.org/: .gitignore  DEPLOYMENT.md  DESIGN_NOTES.md  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
padic-logic.symmachus.org/docs/: language-model-cnf-workflow.md
paper/: Makefile  greedy_hyperplane_walk_experiments.fdb_latexmk  greedy_hyperplane_walk_experiments.fls  greedy_hyperplane_walk_experiments.tex  polynomial_truth_values_research.md  sudoku_padic_regression.fdb_latexmk  sudoku_padic_regression.fls  sudoku_padic_regression.tex
results/: e2_heuristic_comparison.csv
scripts/: analyze_regression.py  test_regression.py
site/: index.html
submission/: README.md  cover_letter.md  huggingface_dataset_README.md  reviewer_objections.md  source_package_README.md
tests/: test_padic_comparison_algorithms.py  test_padic_sudoku_regression.py
(+37 files in other folders)
